src/test/ui/error-codes/E0440.stderr
error[E0440]: platform-specific intrinsic has wrong number of type parameters: found 1, expected 0
  --> $DIR/E0440.rs:18:5
   |
18 |     fn x86_mm_movemask_pd<T>(x: f64x2) -> i32; //~ ERROR E0440
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0440"
